# seam-carver

./: .gitignore  README.md  Updated README.md  pyproject.toml  setup.py
src/seam_carver/: BilinearInterpolation.py  backend.c  backend.h  backend2.c  backend2.h  cli.py  logic.py  wrapper.pyx
