[build-system]
requires = [
    "setuptools>=61.0",
    "Cython>=3.0.0",
    "numpy>=1.20.0",
    "Pillow>=12.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "Rambutan"
version = "0.0.3"
authors = [ 
    {name="Wren C. Kuratana", email="wren@wrenckuratana.com"}, 
    {name="Machiavelli Merkle-Ward", email="mmerklew@macalester.edu"} 
]
description = "A high-performance C/Python seam carving project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "Pillow",
]

[project.scripts]
seam-carver = "seam_carver.cli:main"